--- a/es.html
+++ b/es.html
@@ -7,8 +7,8 @@
     <title>Abendiix</title>
     <meta name="description" content="Developing tools and games for everybody">
     <meta name="twitter:description" content="Developing tools and games for everybody">
-    <meta name="twitter:image" content="https://abendiix.com/assets/img/favicon.svg">
-    <meta property="og:image" content="https://abendiix.com/assets/img/favicon.svg">
+    <meta name="twitter:image" content="assets/img/favicon.svg">
+    <meta property="og:image" content="assets/img/favicon.svg">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Abendiix">
     <meta name="twitter:card" content="summary">
@@ -21,6 +21,7 @@
     <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/favicon.svg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
@@ -30,15 +31,16 @@
             <div class="container">
                 <div class="row font-monospace text-center d-flex d-xl-flex justify-content-center align-items-center">
                     <div class="col-md-6">
-                        <div style="margin: 15px;"></div><img src="assets/img/BannerNegro.svg" style="width: 100%;">
+                        <div style="margin: 15px;"></div><img src="assets/img/BannerNegro.svg" style="max-width: 80%;">
+                        <h3 style="margin: 8px;">¡Juegos y herramientas!</h3>
                         <div style="margin: 15px;"></div>
                     </div>
                     <div class="col-md-6">
                         <div class="row d-xl-flex justify-content-xl-center">
-                            <div class="col d-flex justify-content-center align-items-center"><a href="https://twitter.com/Abendiix" style="width: 15%;margin: 2%;"><img src="assets/img/Twitter.svg"></a><a href="https://abendiix.itch.io/" style="width: 15%;margin: 2%;"><img src="assets/img/Itch.io.svg"></a><a href="https://ko-fi.com/abendiix" style="width: 15%;margin: 2%;"><img src="assets/img/Ko-fi.svg"></a></div>
+                            <div class="col d-flex justify-content-center align-items-center"><a href="#" style="width: 15%;margin: 2%;"><img src="assets/img/Twitter.svg"></a><a href="#" style="width: 15%;margin: 2%;"><img src="assets/img/Itch.io.svg"></a><a href="#" style="width: 15%;margin: 2%;"><img src="assets/img/Ko-fi.svg"></a></div>
                         </div>
                         <div class="row d-xl-flex justify-content-xl-center">
-                            <div class="col d-flex justify-content-center align-items-center"><a href="/" style="color: #141414; margin: 10px;">English</a></div>
+                            <div class="col d-flex justify-content-center align-items-center"><a href="./" style="color: #141414;margin: 10px;">English</a></div>
                         </div>
                     </div>
                 </div>
@@ -48,11 +50,12 @@
     <div class="container text-center">
         <div class="row justify-content-center">
             <div class="col-md-3" style="padding: 25px;">
-                <div class="row" style="border-radius: 10px;margin-top: -15px;margin-bottom: -15px;border-style: solid;">
-                    <div class="col" style="background: #ffffff;border-radius: 10px;margin: 3%;"><img src="assets/img/spriteslove.svg" style="width: inherit;border-radius: 10px;margin-bottom: 10px;margin-top: 20px;border-style: solid;border-color: #141414;"><a style="color: #141414;">Sprites Love</a>
+                <div class="row swing animated" style="border-radius: 10px;margin-top: -15px;margin-bottom: -15px;border-style: solid;">
+                    <div class="col" style="background: #ffffff;border-radius: 10px;margin: 3%;"><img src="assets/img/spriteslove.svg" style="width: inherit;border-radius: 10px;margin-bottom: 10px;margin-top: 20px;border-style: solid;border-color: #141414;">
+                        <p style="margin: 0px;">Sprites Love</p>
                         <div></div>
                         <div class="row text-center">
-                            <div class="col"><a href="https://spriteslove.com/es"><i class="fas fa-link" style="margin-top: 10px;margin-right: 4%;margin-left: 4%;font-size: inherit;margin-bottom: 20px; color: #141414;"></i></a></div>
+                            <div class="col"><a href="https://spriteslove.com/es" target="_blank"><i class="fas fa-link" style="margin-top: 10px;margin-right: 4%;margin-left: 4%;font-size: inherit;margin-bottom: 20px;color: #141414;"></i></a></div>
                         </div>
                     </div>
                 </div>
@@ -64,7 +67,7 @@
         <div class="col" style="text-align: center;"><div class="container">
     <div class="row">
         <div class="col-md">
-            <a href="mailto:contacto@abendiix.com" style="color: #141414; margin: 10px;">Contactar</a>
+            <a href="mailto:contacto@abendiix.com" style="color: #141414;margin: 10px;">Contactar</a>
         </div>
     </div>
 </div></div>
@@ -72,6 +75,7 @@
     <div style="margin: 15px;"></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/test.js"></script>
 </body>
 
