Default texts set to English

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="assets/img/logos/blackBanner.svg" style="max-width: 80%;">
 
                 <!--Moto-->
-                <h3 style="margin: 8px; margin-bottom: 15px;" id="moto">¡Juegos y herramientas!</h3>
+                <h3 style="margin: 8px; margin-bottom: 15px;" id="moto">Games and tools!</h3>
             </div>
         </div>
 
@@ -32,7 +32,7 @@
             <div class="col-md-6">
                 <a onclick="changeToES()" id="es">ESP</a>
                 ·
-                <a onclick="changeToEN()" id="en">ENG</a>
+                <a style="text-decoration: underline;" onclick="changeToEN()" id="en">ENG</a>
                 ·
                 <a onclick="changeToJA()" id="ja">日本語</a>
             </div>
@@ -92,13 +92,13 @@
 
     <!--Contact section-->
     <div class="text-center" style="margin: 2vh; margin-bottom: 1023%;">
-        <p style="margin: 8px; color: #141414;" id="contact">Contactar por correo</p>
-        <a href="mailto:contact@abendiix.com" style="color: #141414; margin: 10px;" id="copy">Copiar</a>
-        <a href="mailto:contact@abendiix.com" style="color: #141414; margin: 10px;" id="openApp">Abrir aplicación</a>
+        <p style="margin: 8px; color: #141414;" id="contact">Contact via email</p>
+        <a href="mailto:contact@abendiix.com" style="color: #141414; margin: 10px;" id="copy">Copy</a>
+        <a href="mailto:contact@abendiix.com" style="color: #141414; margin: 10px;" id="openApp">Open app</a>
     </div>
 
     <!--Emoti gag-->
-    <p id="emotiText">¡Me encontraste!</p>
+    <p id="emotiText">You found me!</p>
     <p id="emoti"></p>
 
     <!--Scripts-->
