Fixed how the project box changes its sizes across the different screens' sizes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/logos/favicon.svg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/animate.min.css">
+    <link rel="stylesheet" href="assets/css/projectBox.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
@@ -44,7 +45,7 @@
         <div class="row justify-content-center">
             
             <!--Project box start-->
-            <div class="col-md-3" style="padding: 25px;">
+            <div class="projectBox" style="padding: 25px;">
                 <div class="row swing animated" style="border-radius: 10px;margin-top: -15px;margin-bottom: -15px;border-style: solid;">
                     <div class="col" style="background: #ffffff; border-radius: 10px; padding: 10%;">
                         
