Added alt text to images as they needed them

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div class="row font-monospace text-center d-flex d-xl-flex justify-content-center align-items-center">
             <div style="margin-top: 15px;" class="col-md-6">
                 <!--Banner-->
-                <img src="assets/img/logos/blackBanner.svg" style="max-width: 80%;">
+                <img alt="Abendiix's logo expanded in banner form. The letters are black and the background of the image is transparent."
+                src="assets/img/logos/blackBanner.svg" style="max-width: 80%;">
 
                 <!--Moto-->
                 <h3 style="margin: 8px; margin-bottom: 15px;" id="moto">Games and tools!</h3>
@@ -50,7 +51,8 @@
                     <div class="col" style="background: #ffffff; border-radius: 10px; padding: 10%;">
                         
                         <!--Project icon-->
-                        <img src="assets/img/spriteslove.svg" style="width: inherit;border-radius: 10px;margin-bottom: 10px;border-style: solid;border-color: #141414;margin-top: 0px;">
+                        <img alt="Logo/Icon for the project called 'Sprites Love'. It shows a pixelated S from the word 'Sprites' and one pixel down and to the right there's a red pixelated heart representing the word 'Love'."
+                        src="assets/img/spriteslove.svg" style="width: inherit; border-radius: 10px; margin-bottom: 10px; border-style: solid; border-color: #141414; margin-top: 0px;">
                         
                         <!--Project name/title-->
                         <p style="margin: 0px;" id="sprlv">Sprites Love</p>
@@ -61,7 +63,8 @@
 
                                 <!--Website icon-->
                                 <a href="https://spriteslove.com" target="_blank">
-                                    <img src="assets/img/icons/link.svg" style="margin: 4%; width: min(40px, 25%);">
+                                    <img alt="Black icon that symbolizes a website link with two diagonal chains that is also used a link to visit the website of the project 'Sprites Love'."
+                                    src="assets/img/icons/link.svg" style="margin: 4%; width: min(40px, 25%);">
                                 </a>
 
                             </div>
@@ -79,16 +82,28 @@
     <!--Section for external sites-->
     <div class="text-center" style="margin: 2vh; margin-top: 2vh;">
         <!--ko-fi icon-->
-        <a href="https://ko-fi.com/abendiix" target="_blank"><img src="assets/img/icons/ko-fi.svg" style="width: min(50px, 25%);"></a>
+        <a href="https://ko-fi.com/abendiix" target="_blank">
+            <img alt="Black icon of the platform Ko-fi, used to redirect to Abendiix's profile."
+            src="assets/img/icons/ko-fi.svg" style="width: min(50px, 25%);">
+        </a>
         ·
         <!--github icon-->
-        <a href="https://github.com/Abendiix" target="_blank"><img src="assets/img/icons/github.svg" style="width: min(40px, 15%);"></a>
+        <a href="https://github.com/Abendiix" target="_blank">
+            <img alt="Black icon of the platform GitHub, used to redirect to Abendiix's profile."
+            src="assets/img/icons/github.svg" style="width: min(40px, 15%);">
+        </a>
         ·
         <!--itchio icon-->
-        <a href="https://abendiix.itch.io/" target="_blank"><img src="assets/img/icons/itch-io.svg" style="width: min(40px, 15%);"></a>
+        <a href="https://abendiix.itch.io/" target="_blank">
+            <img alt="Black icon of the platform itch.io, used to redirect to Abendiix's profile."
+            src="assets/img/icons/itch-io.svg" style="width: min(40px, 15%);">
+        </a>
         ·
         <!--twitter icon-->
-        <a href="https://twitter.com/Abendiix" target="_blank"><img src="assets/img/icons/x-twitter.svg" style="width: min(40px, 15%);"></a>
+        <a href="https://twitter.com/Abendiix" target="_blank">
+            <img alt="Black icon of the platform Twitter, used to redirect to Abendiix's profile."
+            src="assets/img/icons/x-twitter.svg" style="width: min(40px, 15%);">
+        </a>
     </div>
 
     <!--Contact section-->
@@ -100,7 +115,7 @@
 
     <!--Emoti gag-->
     <p id="emotiText">You found me!</p>
-    <p id="emoti"></p>
+    <p alt="Emoticon that ressembles a little guy throwing/giving you some food." id="emoti"></p>
 
     <!--Scripts-->
     <script src="assets/js/copyToClipboardScript.js"></script>
