Change languageChanged.js to also change the alt texts. Spanish and Japanese will have placeholder by now. Also removed the alt from 'emoti' since it seems that they don't work with <p>

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div style="margin-top: 15px;" class="col-md-6">
                 <!--Banner-->
                 <img alt="Abendiix's logo expanded in banner form. The letters are black and the background of the image is transparent."
-                src="assets/img/logos/blackBanner.svg" style="max-width: 80%;">
+                src="assets/img/logos/blackBanner.svg" style="max-width: 80%;" id="banner">
 
                 <!--Moto-->
                 <h3 style="margin: 8px; margin-bottom: 15px;" id="moto">Games and tools!</h3>
@@ -52,7 +52,7 @@
                         
                         <!--Project icon-->
                         <img alt="Logo/Icon for the project called 'Sprites Love'. It shows a pixelated S from the word 'Sprites' and one pixel down and to the right there's a red pixelated heart representing the word 'Love'."
-                        src="assets/img/spriteslove.svg" style="width: inherit; border-radius: 10px; margin-bottom: 10px; border-style: solid; border-color: #141414; margin-top: 0px;">
+                        src="assets/img/spriteslove.svg" style="width: inherit; border-radius: 10px; margin-bottom: 10px; border-style: solid; border-color: #141414; margin-top: 0px;" id="spritesloveicon">
                         
                         <!--Project name/title-->
                         <p style="margin: 0px;" id="sprlv">Sprites Love</p>
@@ -64,7 +64,7 @@
                                 <!--Website icon-->
                                 <a href="https://spriteslove.com" target="_blank">
                                     <img alt="Black icon that symbolizes a website link with two diagonal chains that is also used a link to visit the website of the project 'Sprites Love'."
-                                    src="assets/img/icons/link.svg" style="margin: 4%; width: min(40px, 25%);">
+                                    src="assets/img/icons/link.svg" style="margin: 4%; width: min(40px, 25%);" id="spriteslovelinkicon">
                                 </a>
 
                             </div>
@@ -84,25 +84,22 @@
         <!--ko-fi icon-->
         <a href="https://ko-fi.com/abendiix" target="_blank">
             <img alt="Black icon of the platform Ko-fi, used to redirect to Abendiix's profile."
-            src="assets/img/icons/ko-fi.svg" style="width: min(50px, 25%);">
-        </a>
+            src="assets/img/icons/ko-fi.svg" style="width: min(50px, 25%);" id="ko-fi"></a>
         ·
         <!--github icon-->
         <a href="https://github.com/Abendiix" target="_blank">
             <img alt="Black icon of the platform GitHub, used to redirect to Abendiix's profile."
-            src="assets/img/icons/github.svg" style="width: min(40px, 15%);">
-        </a>
+            src="assets/img/icons/github.svg" style="width: min(40px, 15%);" id="github"></a>
         ·
         <!--itchio icon-->
         <a href="https://abendiix.itch.io/" target="_blank">
             <img alt="Black icon of the platform itch.io, used to redirect to Abendiix's profile."
-            src="assets/img/icons/itch-io.svg" style="width: min(40px, 15%);">
-        </a>
+            src="assets/img/icons/itch-io.svg" style="width: min(40px, 15%);" id="itchio"></a>
         ·
         <!--twitter icon-->
         <a href="https://twitter.com/Abendiix" target="_blank">
             <img alt="Black icon of the platform Twitter, used to redirect to Abendiix's profile."
-            src="assets/img/icons/x-twitter.svg" style="width: min(40px, 15%);">
+            src="assets/img/icons/x-twitter.svg" style="width: min(40px, 15%);" id="twitter">
         </a>
     </div>
 
@@ -115,7 +112,7 @@
 
     <!--Emoti gag-->
     <p id="emotiText">You found me!</p>
-    <p alt="Emoticon that ressembles a little guy throwing/giving you some food." id="emoti"></p>
+    <p id="emoti"></p>
 
     <!--Scripts-->
     <script src="assets/js/copyToClipboardScript.js"></script>
