--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             src="assets/img/spriteslove.svg" style="width: inherit; border-radius: 10px; margin-bottom: 10px; border-style: solid; border-color: #141414; margin-top: 0px;" id="spritesloveicon">
                             
                             <!--Project name/title-->
-                            <p style="margin: 0px;" id="sprlv">Sprites Love</p>
+                            <h5 style="margin: 0px;" id="sprlv">Sprites Love</h5>
                             
                             <!--Project's links-->
                             <div class="row text-center">
@@ -111,7 +111,7 @@
 
         <!--Contact section-->
         <div class="text-center" style="margin: 2vh; margin-bottom: 1023%;">
-            <p style="margin: 8px; color: #141414;" id="contact">Contact via email</p>
+            <h3 style="margin: 8px; color: #141414;" id="contact">Contact via email</h3>
             <a aria-label="Copy Abendiix's contact email to clipboard." role="button" style="color: #141414; margin: 10px; text-decoration: underline;" onclick="copyEmail()" id="copy">Copy</a>
             <a aria-label="Open email app by default to contact Abendiix." href="mailto:contact@abendiix.com" style="color: #141414; margin: 10px;" id="openApp">Open app</a>
         </div>
