Another header size iteration

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/logos/favicon.svg">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/animate.min.css">
+        <link rel="stylesheet" href="assets/css/headers.css">
         <link rel="stylesheet" href="assets/css/projectBox.css">
         <link rel="stylesheet" href="assets/css/styles.css">
     </head>
@@ -29,7 +30,7 @@
                     </h1>
 
                     <!--Moto-->
-                    <h2 style="margin: 8px; margin-bottom: 15px;" id="moto">Games and tools!</h2>
+                    <h2 style="margin: 8px; margin-bottom: 15px;" id="moto">Games and tools!</h3>
                 </div>
             </div>
 
@@ -60,7 +61,7 @@
                             src="assets/img/spriteslove.svg" style="width: inherit; border-radius: 10px; margin-bottom: 10px; border-style: solid; border-color: #141414; margin-top: 0px;" id="spritesloveicon">
                             
                             <!--Project name/title-->
-                            <h5 style="margin: 0px;" id="sprlv">Sprites Love</h5>
+                            <h4 style="margin: 0px;" id="sprlv">Sprites Love</h4>
                             
                             <!--Project's links-->
                             <div class="row text-center">
