--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
         <link rel="stylesheet" href="assets/css/headers.css">
         <link rel="stylesheet" href="assets/css/projectBox.css">
         <link rel="stylesheet" href="assets/css/styles.css">
-        <!--Scripts-->
-        <script src="assets/js/copyToClipboardScript.js"></script>
-        <script src="assets/js/emoti.js"></script>
-        <script src="assets/js/languageChanged.js"></script>
     </head>
 
     <body class="font-monospace" style="font-size: 24px;">
@@ -34,7 +30,9 @@
                     </h1>
 
                     <!--Moto-->
-                    <h2 style="margin: 8px; margin-bottom: 15px;" id="moto">Games and tools!</h3>
+                    <h2 style="margin: 8px; margin-bottom: 15px;" id="moto">
+                        
+                    </h2>
                 </div>
             </div>
 
@@ -125,6 +123,12 @@
             <p id="emotiText">You found me!</p>
             <p id="emoti"></p>
         </div>
+
+        <!--Scripts-->
+        <script src="assets/js/copyToClipboardScript.js"></script>
+        <script src="assets/js/emoti.js"></script>
+        <script src="assets/js/languageChanged.js"></script>
+
     </body>
 
 </html>
