Removed fixing tries and fixed the moto header that had h3 at the end

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                     </h1>
 
                     <!--Moto-->
-                    <h2 style="margin: 8px; margin-bottom: 15px;" id="moto">
-                        
-                    </h2>
+                    <h2 style="margin: 8px; margin-bottom: 15px;" id="moto">Games and tools!</h2>
                 </div>
             </div>
 
