Improving the description's meta content to make search engines recognize it above any other text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <title>Abendiix</title>
-        <meta name="description" content="Games and tools!">
+        <meta name="description" content="Games, tools and more! | ¡Juegos, herramientas y más! | ゲーム、ツール、その他！">
         <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/logos/favicon.svg">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/animate.min.css">
