--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <title>Abendiix</title>
-        <meta name="description" content="Games, tools and more! | ¡Juegos, herramientas y más! | ゲーム、ツール、その他！">
+        <title>Abendiix | Games, tools and more!</title>
+        <meta name="description" content="I'm Abendiix and I make games, tools and anything needed that can change the world bit by bit.">
         <link rel="icon" type="image/svg+xml" sizes="150x150" href="assets/img/logos/favicon.svg">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/animate.min.css">
@@ -24,20 +24,19 @@
                     <!--Banner-->
                     <h1>
                         <a aria-label="Link to Abendiix's website (where you are now)." href="http://abendiix.com" id="linktothisweb">
-                            <img alt = "Abendiix's logo in expanded form. The letters are black and the background of the image is transparent."
-                            src="assets/img/logos/blackBanner.svg" style="max-width: 80%;" id="banner">
+                            <img alt="Abendiix's logo in expanded form. The letters are black and the background of the image is transparent."
+                            src="assets/img/logos/blackBanner.svg" style="max-width: 65%;" id="banner">
                         </a>
                     </h1>
 
                     <!--Moto-->
-                    <h2 style="margin: 8px; margin-bottom: 15px;" id="moto">Games, tools and more!</h2>
+                    <h2 style="font-size: 1.5vw; margin: 8px; margin-bottom: 15px;" id="moto">Games, tools and more!</h2>
                 </div>
             </div>
 
             <!--Section of the languages available-->
             <div class="row font-monospace text-center d-flex d-xl-flex justify-content-center align-items-center">
                 <div class="col-md-6">
-                    <h3 id="changelanguageheader">Change language</h3>
                     <a aria-label="Cambiar el idioma de la web a español." role="button" onclick="changeToES()" id="es">ES</a>
                     ·
                     <a aria-label="Change website's language to Spanish." role="button" style="text-decoration: underline;" onclick="changeToEN()" id="en">ENG</a>
