Bluesky's link fixed

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ SOFTWARE.
                         ·
 
                         <!--bluesky-->
-                        <a aria-label="Link to Abendiix's Bluesky." href="https://bsky.app/profile/abendiix.bsky.social" target="_blank" id="blueskylink">
+                        <a aria-label="Link to Abendiix's Bluesky." href="https://bsky.app/profile/abendiix.com" target="_blank" id="blueskylink">
                             <img alt="Bluesky icon in black (clear mode) that redirects to Abendiix's profile."
                             src="assets/img/icons/bluesky.svg" style="width: min(40px, 15%);" id="bluesky" class="changeableColor">
                         </a>
